@@ -12,13 +12,12 @@ import org.springframework.context.annotation.DependsOn;
 import org.springframework.core.io.ByteArrayResource;
 import org.springframework.stereotype.Component;
 
-import javax.annotation.PostConstruct;
+import jakarta.annotation.PostConstruct;
 import java.io.IOException;
 import java.time.Duration;
 import java.util.Base64;
 import java.util.concurrent.TimeUnit;
 
-import static java.lang.String.format;
 import static no.difi.meldingsutveksling.ServiceIdentifier.DPE;
 
 @Slf4j
@@ -35,7 +34,7 @@ public class ServiceBusAmqpClient {
 
     @PostConstruct
     public void init() {
-        String connectionString = String.format("Endpoint=sb://%s/;SharedAccessKeyName=%s;SharedAccessKey=%s",
+        String connectionString = "Endpoint=sb://%s/;SharedAccessKeyName=%s;SharedAccessKey=%s".formatted(
                 properties.getNextmove().getServiceBus().getBaseUrl(),
                 properties.getNextmove().getServiceBus().getSasKeyName(),
                 serviceBusUtil.getSasKey());
@@ -63,7 +62,7 @@ public class ServiceBusAmqpClient {
         try {
             payload = payloadConverter.convert(m.getBody().toBytes());
         } catch (IOException e) {
-            log.error(String.format("Failed to convert servicebus message with id = %s, abandoning", m.getMessageId()), e);
+            log.error("Failed to convert servicebus message with id = %s, abandoning".formatted(m.getMessageId()), e);
             context.deadLetter();
             return;
         }
@@ -99,7 +98,7 @@ public class ServiceBusAmqpClient {
                 log.error("Unable to sleep");
             }
         } else {
-            log.error(String.format("Error source %s, reason %s", context.getErrorSource(), reason), context.getException());
+            log.error("Error source %s, reason %s".formatted(context.getErrorSource(), reason), context.getException());
         }
     }
 
